--- a/package.json
+++ b/package.json
@@ -10,28 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
     "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@faker-js/faker": "^9.6.0",
-
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "generate-react-cli": "^8.4.9",
-    "react": "^18.3.1",
-
+    "motion": "^12.5.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.28.0",
     "react-step-progress-bar": "^1.0.3",
     "rsuite": "^5.78.0",
     "styled-components": "^6.1.15",
-
-    "yup": "^1.4.0"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -44,5 +41,10 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "vite": "^5.4.10"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
