--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "motion": "^12.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
+    "react-chatbot-kit": "^2.2.2",
+    "react-chatbotify": "^2.0.0-beta.33",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-otp-input": "^3.1.1",
