--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "@chatscope/chat-ui-kit-react": "^2.1.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@faker-js/faker": "^9.6.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
@@ -25,9 +25,12 @@
     "react-chatbotify": "^2.0.0-beta.33",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-loading-indicators": "^1.0.1",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.28.0",
+    "react-spinners": "^0.17.0",
     "react-step-progress-bar": "^1.0.3",
+    "react-toastify": "^11.0.5",
     "rsuite": "^5.78.0",
     "styled-components": "^6.1.15",
     "yup": "^1.2.0"
