--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@faker-js/faker": "^9.6.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@lottiefiles/dotlottie-react": "^0.14.1",
+    "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "emoji-mart": "^5.6.0",
     "formik": "^2.4.6",
     "generate-react-cli": "^8.4.9",
+    "lucide-react": "^0.514.0",
     "motion": "^12.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-chatbot-kit": "^2.2.2",
     "react-chatbotify": "^2.0.0-beta.33",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-loading-indicators": "^1.0.1",
     "react-otp-input": "^3.1.1",
@@ -32,7 +37,9 @@
     "react-step-progress-bar": "^1.0.3",
     "react-toastify": "^11.0.5",
     "rsuite": "^5.78.0",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.15",
+    "tailwindcss": "^4.1.10",
     "yup": "^1.2.0"
   },
   "devDependencies": {
