--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://3e6a-197-166-238-191.ngrok-free.app/api
-VITE_CV_API=https://3e6a-197-166-238-191.ngrok-free.app
+VITE_API_URL=https://94deaea98e01.ngrok-free.app/api
+VITE_CV_API=https://94deaea98e01.ngrok-free.app
