--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@lottiefiles/dotlottie-react": "^0.14.1",
     "@tailwindcss/vite": "^4.1.10",
+    "antd": "^5.26.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "emoji-mart": "^5.6.0",
     "formik": "^2.4.6",
     "generate-react-cli": "^8.4.9",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.514.0",
     "motion": "^12.5.0",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-bootstrap": "^2.10.9",
     "react-chatbot-kit": "^2.2.2",
     "react-chatbotify": "^2.0.0-beta.33",
@@ -32,6 +35,8 @@
     "react-icons": "^5.5.0",
     "react-loading-indicators": "^1.0.1",
     "react-otp-input": "^3.1.1",
+    "react-query": "^3.39.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.28.0",
     "react-spinners": "^0.17.0",
     "react-step-progress-bar": "^1.0.3",
